--- a/Credit_card_fraud_detection_GF.ipynb
+++ b/Credit_card_fraud_detection_GF.ipynb
@@ -38,7 +38,8 @@
    "id": "e98e59b8",
    "metadata": {},
    "source": [
-    "In this brief study, we will try to identify the best ML model for identifying fraudulent credit card transactions, using a deeply inbalanced dataset.\n",
+    "In this brief study, we will try to identify the best ML model for identifying fraudulent credit card transactions, using a deeply inbalanced dataset  \n",
+    "(https://www.kaggle.com/datasets/mlg-ulb/creditcardfraud).\n",
     "\n",
     "The sampling method is undersampling (1:1 ratio of target classes) which will be extended to weighted undersampling(1:100 ratio) to try to confirm our results.\n",
     "\n",
