--- a/Credit_card_fraud_detection_GF.ipynb
+++ b/Credit_card_fraud_detection_GF.ipynb
@@ -441,12 +441,11 @@
     "    \n",
     "In this context we will consider two assumptions:  \n",
     "  \n",
-    "1. A fraud not detected is much more serious in reputational and economic terms for the bank  \n",
-    "than a legitimate transaction  misclassified as fraud \n",
+    "1. A fraud not detected is much more serious in reputational and economic terms for the bank than a legitimate transaction  misclassified as fraud \n",
     "\n",
     "<!-- -->\n",
-    "2. The bank consequently prefers to minimize fraud_not_detected and not pay particular attention to false_alarms     \n",
-    "because a false allarm can be easily resolved by an automatic notification that ask the owner of the transaction.  \n"
+    "2. The bank consequently prefers to minimize fraud_not_detected and not pay particular attention to false_alarms because a false allarm can be easily\n",
+    "resolved by an automatic notification that ask the owner of the transaction.  \n"
    ]
   },
   {
@@ -905,7 +904,7 @@
     "sample_fraud_transaction = fraud_transaction\n",
     "\n",
     "sample_legit_transaction = legit_transaction.sample(n=492,\n",
-    "                                                    replace= False, #replace false to avoid doubleS\n",
+    "                                                    replace= False, #replace false to avoid doubles\n",
     "                                                    random_state = 1)\n",
     "#merge samples\n",
     "data_undersample = pd.concat([sample_fraud_transaction, sample_legit_transaction], axis= 0)\n",
@@ -930,7 +929,7 @@
    "outputs": [],
    "source": [
     "#define train test set \n",
-    "X = data_undersample.drop(columns='Class', axis=1) #use std features\n",
+    "X = data_undersample.drop(columns='Class', axis=1) \n",
     "Y = data_undersample['Class']       \n",
     "\n",
     "x_train , x_test , y_train , y_test = train_test_split (X , Y , test_size = 0.2,\n",
@@ -1020,7 +1019,7 @@
     "<!-- -->\n",
     "3. The standardization is applied with a pipeline to not produce data leaks from train to test set \n",
     "<!-- -->\n",
-    "4. Cross validation will have 5 folds and is already automatically stratified because it is a binary classification   \n",
+    "4. Cross validation will have 5 folds and is already automatically stratified because it is a binary classification\n",
     "(as reported by the sklearn documentation)\n"
    ]
   },
@@ -1163,13 +1162,13 @@
    "metadata": {},
    "source": [
     "The model performs better by not identifying 13.27 % percent of fraudulent transactions.  \n",
-    "Having used cross valdiation also its robustness and we can trust his results more than just using train and test set.  \n",
+    "Having used cross valdiation it is more robust and we can trust his results more than just using train and test set.  \n",
     "We can also see that lasso regularization has eliminated some unnecessary variables, those with weight 0:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 62,
    "id": "b1412cba",
    "metadata": {
     "ExecuteTime": {
@@ -1214,7 +1213,7 @@
       "V28       0.137774\n",
       "dtype: float64\n",
       "\n",
-      "Variables omitted by lasso are: \n",
+      "\u001b[1m\u001b[4mVariables omitted by lasso are:\u001b[0m\n",
       "V21    0.0\n",
       "dtype: float64\n"
      ]
@@ -1227,7 +1226,7 @@
     "\n",
     "print(weights)\n",
     "print(\"\")\n",
-    "print(\"Variables omitted by lasso are: \")\n",
+    "print('\\033[1m\\033[4mVariables omitted by lasso are:\\033[0m')\n",
     "print(weights[weights== 0])"
    ]
   },
@@ -1283,7 +1282,7 @@
    "id": "fc489049",
    "metadata": {},
    "source": [
-    "However, during grid search, the distance between trining and validation performance does not seem too significant"
+    "However, during grid search, the distance between training and validation performance does not seem too significant"
    ]
   },
   {
@@ -1438,7 +1437,7 @@
    "metadata": {},
    "source": [
     "The random forest seems to suffer from overfitting as it always performs better in the training set than in the test set.  \n",
-    "This is also visible from the validation train difference in the graph."
+    "This is also visible from the validation train difference in the graph which is greater than in the Logitic model."
    ]
   },
   {
@@ -1788,8 +1787,8 @@
    "id": "22869721",
    "metadata": {},
    "source": [
-    "The naive bayes seems to be the model that suffers less from overfitting as we can see from the small difference between test and training performance  \n",
-    " and from the trend of training and validation convergence during the gridearch."
+    "The naive bayes seems to be the model that suffers less from overfitting as we can see from the small difference between test and training performance\n",
+    "(and from the convergence of training and validation graph)"
    ]
   },
   {
@@ -2594,7 +2593,7 @@
    "source": [
     "Identifying the best model is not easy and requires a small paragraph aside.  \n",
     "The table below shows that in terms of accuracy the best models are the Random Forest and Logistic (92.89 % accuracy).  \n",
-    "If we want also to consider the minimal difference in training and test set as hint of less risk in overfitting we can state that probably the ebst model   is the Logistic (best accuracy and second smallest difference in train and test set)."
+    "If we want also to consider the minimal difference in training and test set as hint of less risk in overfitting we can state that probably the best model   is the Logistic (best accuracy and second smallest difference in train and test set)."
    ]
   },
   {
@@ -2704,7 +2703,9 @@
     "* increases the dataset  \n",
     "* have less computationally expensive training  \n",
     "\n",
-    "N.B. To reduce the training time some parameters are already changed according to the previous results."
+    "N.B. To reduce the training time some parameters are already changed according to the previous results.\n",
+    "\n",
+    "The final result of this operation is summarized in the tables in the conclusion."
    ]
   },
   {
