--- a/Credit_card_fraud_detection_GF.ipynb
+++ b/Credit_card_fraud_detection_GF.ipynb
@@ -26,6 +26,28 @@
   {
    "attachments": {},
    "cell_type": "markdown",
+   "id": "0c70d0cb",
+   "metadata": {},
+   "source": [
+    "## Table of contents\n",
+    "   \n",
+    "1. Class inbalance  \n",
+    "   1.1 naive model  \n",
+    "   1.2 Zero model\n",
+    "2. The toolbox\n",
+    "3. Undersampling  \n",
+    "   3.1 Logistic model  \n",
+    "   3.2 Random Forest  \n",
+    "   3.3 Naive bayes  \n",
+    "   3.4 SVC  \n",
+    "4. Identify the best model\n",
+    "5. Weighted Undersampling\n",
+    "6. Conclusion"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
    "id": "6c44c9b9",
    "metadata": {},
    "source": [
